Added opening console